2017-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Optimize ifx on 16-bit pointer read.
	* src/z80/peeph-z80.def:
	  Improve peephole rules for chaching 0 in a.

2017-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve subtraction of global variables.
	* src/z80/gen.c:
	  Simplify stack adjustment.
	* src/z80/gen.c:
	  Improve 32-bit increment.
	* src/z80/ralloc2.cc:
	  Improve handling of a in negation.
	* src/z80/gen.c:
	  Improve cast to signed long and signed long long.
	* src/z80/gen.c:
	  Improve addition of immediates.

2017-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: boost 1.64
	* sdas/linksrc/lkmem.c: fixed warning
	* src/mcs51/peep.c,
	* src/SDCCast.c,
	* src/SDCCcse.c,
	* src/SDCCmem.c,
	* src/z80/ralloc2.cc: cosmetic changes

2017-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in pointer read and ifx.

2017-10-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/main.c (_parseOptions): fix bug #2634

2017-10-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.h,
	  src/SDCCdwarf2.c:
	  CFI handling in DWARFv2 output, patch by Åke Rehnman.

2017-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  Debug info infrastructure for stm8 registers.
	* device/lib/_fsgt.c,
	  device/lib/incl.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c
	  src/SDCCopt.c:
	  Remove __fsgt support function, RFE #526.
	* src/z80/gen.c:
	  Improve handling of variables on stack in return.
	* src/SDCCsymt.c:
	  Fix bug #2666.

2017-10-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/peeph.def:
	  Fix a potential bug in label reference count calculation.

2017-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdebug.h,
	  src/SDCCdwarf2.c,
	  src/cdbFile.c,
	  src/stm8/gen.c,
	  src/stm8/ralloc.c,
	  src/stm8/ralloc.h:
	  STM8 frame address debug info, based on patch by Åke Rehnman.